@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.6</version>
+		<version>2.5.8</version>
 		<relativePath/>
 	</parent>
 
@@ -23,47 +23,7 @@
 
 		<liquibase.version>3.5.3</liquibase.version>
 		<cxf.version>3.1.6</cxf.version>
-
-		<!-- See Profile <id>${project.groupId}-${project.artifactId}}</id> below! -->
-		<riharest.test.pathRoot>target/test-files/</riharest.test.pathRoot>
-		<riharest.test.pathRootWindows>${riharest.pathRootWindows}</riharest.test.pathRootWindows>
-		<riharest.test.authService>${riharest.authService}</riharest.test.authService>
-		<riharest.test.isTest>${riharest.isTest}</riharest.test.isTest>
-		<riharest.test.authTimeout>${riharest.authTimeout}</riharest.test.authTimeout>
-
-		<!-- Performance test settings: -->
-		<jmeter.skip>false</jmeter.skip>
-		<jmeter.test>rest-get-object</jmeter.test>
-		<jmeter.host>triinu.girf.ee</jmeter.host>
-		<jmeter.port>8010</jmeter.port>
-		<jmeter.parallelRequests>1</jmeter.parallelRequests>
-		<jmeter.ignoreFailures>true</jmeter.ignoreFailures>
-		<jmeter.suppressOutput>false</jmeter.suppressOutput>
-		<jmeter.rampUpPeriod>10</jmeter.rampUpPeriod>
-		<jmeter.loopCount>1</jmeter.loopCount>
 	</properties>
-
-	<profiles>
-		<profile>
-			<id>${project.groupId}-${project.artifactId}</id>
-			
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			
-			<properties>
-				<!-- Properties in resource files: -->
-				<riharest.pathRoot>/opt/riha/</riharest.pathRoot>
-				<riharest.isTest>true</riharest.isTest>
-				<riharest.authTimeout>3600000</riharest.authTimeout>
-				<riharest.base.url>http://localhost:8080/rest</riharest.base.url>
-				<riharest.authService>http://localhost:8080/riha/sessionManagementServlet</riharest.authService>
-				
-				<!-- Note the trailing slash! -->
-				<riharest.pathRootWindows>C:\\test_folder\\</riharest.pathRootWindows>
-			</properties>
-		</profile>
-	</profiles>
 
 	<dependencies>
 		<dependency>
@@ -123,30 +83,46 @@
 			<scope>test</scope>
 		</dependency>
 
-
 		<!-- embedded postgres -->
-		<dependency>
-			<groupId>ru.yandex.qatools.embed</groupId>
-			<artifactId>postgresql-embedded</artifactId>
-			<version>2.10</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.embed</groupId>
+            <artifactId>postgresql-embedded</artifactId>
+            <version>2.10</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>de.flapdoodle.embed</groupId>
+                    <artifactId>de.flapdoodle.embed.process</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.process</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+      
 
 		<!-- other -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.5</version>
+			<version>1.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
+			<version>2.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>4.0.1</version>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.0</version>
 		</dependency>
 	</dependencies>
 
@@ -246,120 +222,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-failsafe-plugin</artifactId>-->
-				<!--<version>2.18.1</version>-->
-
-				<!--<configuration>-->
-					<!--<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>-->
-					<!--<environmentVariables>-->
-						<!--<serviceurl>http://localhost:${test.server.port}/rest</serviceurl>-->
-					<!--</environmentVariables>-->
-
-					<!--<includes>-->
-						<!--<include>**/integration/**.java</include>-->
-						<!--<include>**/integration/*/**.java</include>-->
-					<!--</includes>-->
-
-					<!--<encoding>UTF-8</encoding>-->
-
-				<!--</configuration>-->
-
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<goals>-->
-							<!--<goal>integration-test</goal>-->
-							<!--<goal>verify</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-
-			<!--</plugin>-->
-
-			<!--<plugin>-->
-				<!--<groupId>com.lazerycode.jmeter</groupId>-->
-				<!--<artifactId>jmeter-maven-plugin</artifactId>-->
-				<!--<version>2.0.3</version>-->
-				<!--<configuration>-->
-					<!--<propertiesJMeter>-->
-						<!--<log_level.jmeter>DEBUG</log_level.jmeter>-->
-					<!--</propertiesJMeter>-->
-					<!--<testFilesIncluded>-->
-						<!--<jMeterTestFile>${jmeter.test}.jmx</jMeterTestFile>-->
-					<!--</testFilesIncluded>-->
-					<!--<testResultsTimestamp>false</testResultsTimestamp>-->
-					<!--<overrideRootLogLevel>DEBUG</overrideRootLogLevel>-->
-					<!--<suppressJMeterOutput>${jmeter.suppressOutput}</suppressJMeterOutput>-->
-					<!--<ignoreResultFailures>${jmeter.ignoreFailures}</ignoreResultFailures>-->
-
-					<!--<skipTests>${jmeter.skip}</skipTests>-->
-					<!--<propertiesUser>-->
-						<!--<restApiHost>${jmeter.host}</restApiHost>-->
-						<!--<restApiPort>${jmeter.port}</restApiPort>-->
-						<!--<parallelRequests>${jmeter.parallelRequests}</parallelRequests>-->
-						<!--<rampUpPeriod>${jmeter.rampUpPeriod}</rampUpPeriod>-->
-						<!--<loopCount>${jmeter.loopCount}</loopCount>-->
-					<!--</propertiesUser>-->
-					<!--&lt;!&ndash; propertiesJMeter> <jmeter.save.saveservice.thread_counts>true</jmeter.save.saveservice.thread_counts> -->
-						<!--</propertiesJMeter &ndash;&gt;-->
-					<!--<jmeterExtensions>-->
-						<!--<artifact>kg.apc:jmeter-plugins-json:jar:2.3</artifact>-->
-					<!--</jmeterExtensions>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-
-
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-antrun-plugin</artifactId>-->
-		<!---->
-				<!--<executions>-->
-					<!--&lt;!&ndash; use real PATH_ROOT in integration tests &ndash;&gt;-->
-					<!--<execution>-->
-		<!---->
-						<!--<id>set_actual.riharest.path_root</id>-->
-		<!---->
-						<!--<phase>pre-integration-test</phase>-->
-		<!---->
-						<!--<goals>-->
-							<!--<goal>run</goal>-->
-						<!--</goals>-->
-		<!---->
-						<!--<configuration>-->
-							<!--<target>-->
-								<!--<propertyfile-->
-									<!--file="${project.build.testOutputDirectory}/riharest.project.properties">-->
-									<!--<entry key="PATH_ROOT" value="${riharest.pathRoot}" />-->
-								<!--</propertyfile>-->
-							<!--</target>-->
-						<!--</configuration>-->
-					<!--</execution>-->
-					<!---->
-					<!--&lt;!&ndash; change PATH_ROOT back to test value after integration tests&ndash;&gt;-->
-					<!--<execution>-->
-		<!---->
-						<!--<id>set_test.riharest.path_root</id>-->
-		<!---->
-						<!--<phase>post-integration-test</phase>-->
-		<!---->
-						<!--<goals>-->
-							<!--<goal>run</goal>-->
-						<!--</goals>-->
-		<!---->
-						<!--<configuration>-->
-							<!--<target>-->
-								<!--<propertyfile-->
-									<!--file="${project.build.testOutputDirectory}/riharest.project.properties">-->
-									<!--<entry key="PATH_ROOT" value="${riharest.test.pathRoot}" />-->
-								<!--</propertyfile>-->
-							<!--</target>-->
-						<!--</configuration>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			<!--</plugin>-->
-
 		</plugins>
 	</build>
 </project>
